# dpdk

./: .gitignore  MAINTAINERS  README.md  VERSION  meson.build  meson_options.txt  vrdma.h
app/: meson.build
app/hairpin-ct/: actions_gen.c  actions_gen.h  config.h  flow_gen.c  flow_gen.h  items_gen.c  items_gen.h  main.c  meson.build
app/proc-info/: main.c
app/test/: meson.build  test_cryptodev.c  test_cryptodev.h  test_cryptodev_aes_test_vectors.h  test_cryptodev_blockcipher.c  test_cryptodev_blockcipher.h  test_devargs.c  test_eal_flags.c  test_flow_classify.c  test_mempool.c
app/test-compress-perf/: comp_perf_test_cyclecount.c  main.c
app/test-flow-perf/: main.c
app/test-mlx5/: meson.build  mlx5dr_test.c  mlx5dr_test.h  mlx5dr_test_dummy.c  mlx5dr_test_pattern_args.c  mlx5dr_test_pool.c  mlx5dr_test_post_send.c  mlx5dr_test_rte_insert.c  mlx5dr_test_rte_insert_mult.c  mlx5dr_test_rule_insert.c  mlx5dr_test_rule_insert_mult.c  mlx5dr_test_vlan_action.c
app/test-mlx5-pydiru/: __init__.py  args_parser.py  base.py  meson.build  prm_structs.py  run_tests.py  test_mlx5dr_actions.py  test_mlx5dr_aso.py  test_mlx5dr_complex_rules.py  test_mlx5dr_control_path.py  test_mlx5dr_fdb.py  test_mlx5dr_matchers.py  test_mlx5dr_rules.py  utils.py
app/test-pmd/: cmd_flex_item.c  cmdline.c  cmdline_flow.c  cmdline_mtr.c  cmdline_mtr.h  config.c  csumonly.c  flowgen.c  icmpecho.c  ieee1588fwd.c  iofwd.c  meson.build  noisy_vnf.c  parameters.c  testpmd.c  testpmd.h  txonly.c  util.c
app/test-regex/: main.c
config/: meson.build  rte_config.h
config/arm/: arm64_bluefield_linux_native_gcc
debian/: changelog  control  mlnx-dpdk-dev.install  mlnx-dpdk.install  rules
devtools/: libabigail.abignore
doc/api/: doxy-api.conf.in
doc/guides/: conf.py
doc/guides/cryptodevs/: mlx5.rst
doc/guides/linux_gsg/: enable_func.rst  linux_eal_parameters.rst
doc/guides/nics/: features.rst  mlx4.rst  mlx5.rst
doc/guides/platform/: index.rst  mlx5.rst
doc/guides/prog_guide/: env_abstraction_layer.rst  gpudev.rst  index.rst  rte_flow.rst  traffic_metering_and_policing.rst
doc/guides/regexdevs/: mlx5.rst
doc/guides/rel_notes/: deprecation.rst  release_20_11.rst  release_21_11.rst
doc/guides/testpmd_app_ug/: run_app.rst  testpmd_funcs.rst
doc/guides/tools/: cryptoperf.rst  flow-perf.rst
doc/guides/vdpadevs/: mlx5.rst
drivers/: meson.build
drivers/bus/: meson.build
drivers/bus/auxiliary/: auxiliary_common.c  auxiliary_params.c  meson.build  private.h  rte_bus_auxiliary.h
drivers/bus/pci/: pci_common.c  pci_params.c
drivers/bus/vdev/: vdev.c
drivers/bus/vmbus/: vmbus_common.c
drivers/common/mlx5/: meson.build  mlx5_common.c  mlx5_common.h  mlx5_common_devx.c  mlx5_common_devx.h  mlx5_common_mp.c  mlx5_common_mr.c  mlx5_common_mr.h  mlx5_common_pci.c  mlx5_common_private.h  mlx5_common_utils.c  mlx5_common_utils.h  mlx5_devx_cmds.c  mlx5_devx_cmds.h  mlx5_malloc.c  mlx5_prm.h  version.map
drivers/compress/: meson.build
drivers/compress/mlx5/: mlx5_compress.c
drivers/crypto/: meson.build
drivers/crypto/mlx5/: mlx5_crypto.c  mlx5_crypto.h  mlx5_crypto_dek.c
drivers/crypto/qat/: qat_sym_hw_dp.c
drivers/gpu/: meson.build
drivers/gpu/cuda/: cuda.c
drivers/net/bnxt/: bnxt_ethdev.c
drivers/net/bonding/: rte_eth_bond_args.c
drivers/net/dpaa/: dpaa_ethdev.c
drivers/net/dpaa2/: dpaa2_ethdev.c
drivers/net/e1000/: em_ethdev.c  igb_ethdev.c
drivers/net/enic/: enic_ethdev.c
drivers/net/failsafe/: failsafe_args.c  failsafe_eal.c
drivers/net/hns3/: hns3_ethdev.c  hns3_ethdev_vf.c  hns3_regs.c
drivers/net/i40e/: i40e_ethdev.c
drivers/net/ice/: ice_ethdev.c
drivers/net/ionic/: ionic_ethdev.c
drivers/net/ixgbe/: ixgbe_ethdev.c
drivers/net/mlx4/: mlx4_txq.c
drivers/net/mlx5/steering/: meson.build  mlx5dr.h  mlx5dr_action.c  mlx5dr_action.h  mlx5dr_buddy.c  mlx5dr_buddy.h  mlx5dr_cmd.c  mlx5dr_cmd.h  mlx5dr_context.c  mlx5dr_context.h  mlx5dr_debug.c  mlx5dr_debug.h  mlx5dr_definer.c  mlx5dr_definer.h  mlx5dr_internal.h  mlx5dr_matcher.c  mlx5dr_matcher.h  mlx5dr_pat_arg.c  mlx5dr_pat_arg.h  mlx5dr_pool.c  mlx5dr_pool.h  mlx5dr_rule.c  mlx5dr_rule.h  mlx5dr_send.c  mlx5dr_send.h  mlx5dr_table.c  mlx5dr_table.h
examples/: meson.build
examples/l2fwd-crypto/: main.c
examples/vdpa/: main.c
examples/vhost/: main.c
examples/vrdma/: Makefile  main.c  meson.build
lib/: meson.build
lib/librte_compressdev/: rte_compressdev_internal.h
lib/librte_cryptodev/: rte_crypto_sym.h  rte_cryptodev.c  rte_cryptodev.h
lib/librte_eal/: version.map
lib/librte_ethdev/: ethdev_private.c  meson.build  rte_class_eth.c  rte_ethdev.c  rte_ethdev.h  rte_ethdev_core.h  rte_ethdev_driver.h  rte_flow.c  rte_flow.h  rte_flow_driver.h  rte_mtr.c  rte_mtr.h  rte_mtr_driver.h  rte_sft.c  rte_sft.h  rte_sft_driver.h  sft_tcp.c  sft_utils.c  sft_utils.h  version.map
lib/librte_gpudev/: gpudev.c
lib/librte_hash/: meson.build  rte_lhash.c  version.map
lib/librte_ip_frag/: ip_frag_common.h  ip_frag_internal.c  meson.build  rte_ip_frag.h  rte_ip_frag_common.c  rte_ipv4_reassembly.c  rte_ipv6_reassembly.c  version.map
lib/librte_kvargs/: rte_kvargs.c  rte_kvargs.h
lib/librte_mempool/: rte_mempool.c  rte_mempool.h  version.map
lib/librte_net/: rte_gtp.h  rte_ip.h
lib/librte_regexdev/: rte_regexdev.h
lib/librte_telemetry/: telemetry.c  telemetry_legacy.c
lib/librte_vhost/: rte_vdpa_dev.h  vhost.c  vhost_user.c
pkg/: mlnx-dpdk.spec
pydiru/: base.pxd  base.pyx  libibverbs.pxd  libpydiru.pxd  meson.build  pydiru_enums.pyx  pydiru_enums_c.pxd  pydiru_error.py  rte_flow.pxd  rte_flow.pyx
pydiru/providers/mlx5/: libmlx5.pxd  meson.build  mlx5.pxd  mlx5.pyx  mlx5_flow.pxd  mlx5_flow.pyx
pydiru/providers/mlx5/steering/: libmlx5dr.pxd  meson.build  mlx5dr_action.pxd  mlx5dr_action.pyx  mlx5dr_context.pxd  mlx5dr_context.pyx  mlx5dr_devx_objects.pxd  mlx5dr_devx_objects.pyx  mlx5dr_enums.pyx  mlx5dr_enums_c.pxd  mlx5dr_matcher.pxd  mlx5dr_matcher.pyx  mlx5dr_rule.pxd  mlx5dr_rule.pyx  mlx5dr_table.pxd  mlx5dr_table.pyx
usertools/: dpdk-hugepages.py
(+115 files in other folders)
