# SPDX-License-Identifier: BSD-3-Clause
# Copyright (c) 2021 NVIDIA CORPORATION. All rights reserved.

includes += include_directories('.')
sources += files(
	'mlx5dr_context.c',
	'mlx5dr_table.c',
	'mlx5dr_matcher.c',
	'mlx5dr_rule.c',
	'mlx5dr_action.c',
	'mlx5dr_pool.c',
	'mlx5dr_cmd.c',
	'mlx5dr_send.c',
)

